tests/ui/traits/next-solver/overflow/recursive-self-normalization.stderr
error[E0277]: the trait bound `<T as Foo>::Assoc: Bar` is not satisfied
  --> $DIR/recursive-self-normalization.rs:11:17
   |
LL |     needs_bar::<T::Assoc>();
   |                 ^^^^^^^^ the trait `Bar` is not implemented for `<T as Foo>::Assoc`
   |
note: required by a bound in `needs_bar`
  --> $DIR/recursive-self-normalization.rs:8:17
   |
LL | fn needs_bar<S: Bar>() {}
   |                 ^^^ required by this bound in `needs_bar`
help: consider further restricting the associated type
   |
LL | fn test<T: Foo<Assoc = <T as Foo>::Assoc>>() where <T as Foo>::Assoc: Bar {
   |                                              ++++++++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
